# bank_transactions_formatter

./: .gitignore  README.md  consolidator.py  data_models.py  exceptions.py  file_dt_checker.py  main.py  pyproject.toml  selector.py
formatters/: bank_formatter.py  citi_formatter.py  citi_statement_formatter.py  csv_formatter.py  dbs_acct_formatter.py  dbs_statement_formatter.py  hsbc_formatter.py  posb_formatter.py  sc_acct_formatter.py  sc_card_formatter.py  txt_formatter.py  uob_acct_formatter.py  uob_card_formatter.py
